overflow fix for base64
 + add max-width

--- a/docs/colors.css
+++ b/docs/colors.css
@@ -1,31 +1,31 @@
 .color-priority-urgent {
-    color:red;
+    background-color:red;
     font-weight: 900;
-    font-size:1.3em;
+    font-size:1.6em;
 }
 
 .color-priority-hazard {
-    color:darkorange;
+    background-color:darkorange;
     font-weight: 700;
-    font-size: 1.1em;
+    font-size: 1.3em;
 }
 
 .color-priority-focal {
-    color:black;
+    background-color:white;
     font-weight: 600;
-    font-size: 1em;
+    font-size: 1.2em;
 }
 
 .color-priority-context {
-    color:grey;
+    background-color:lightgray;
     font-weight: 400;
-    font-size: .9em;
+    font-size: 1em;
 }
 
 .color-priority-symbols {
-    color:aquamarine;
+    background-color:lightgray;
     font-weight: 300;
-    font-size:.7em;
+    font-size:.9em;
 }
 
 .color-priority-aux {
