--- a/docs/keymap_from_value.css
+++ b/docs/keymap_from_value.css
@@ -1,8 +1,14 @@
 @import url("./fonts.css");
 @import url("./colors.css");
-
+HTML {
+    border:0;
+    padding:0;
+}
 BODY {
     font-family: plexscls, Courier, monospace;
+    border:0;
+    padding:0;
+    margin:0;
 }
 
 INPUT {
@@ -18,25 +24,23 @@ FIELDSET {
 }
 
 
-#keykeypair {    
+#keykeypair {
+    position:fixed;
+    bottom:0;
+    left:0;
     clear:left;
     height: 3em;
-    vertical-align: middle;
+    width: 100%;
     word-wrap: normal;
 }
 
-#jsonobjects {
-    border-width: 0 2px 0 2px;
-    box-shadow: 4px 4px 9px black;
-    border-color: black;
-    border-style: solid;    
+#keykeypair *::first-line {
+    font-size: 1.5em;
 }
 
-#prefixfs{
-    width:100%;
-    height:2em;
-    border:0px;
 
+#jsonobjects {
+    /* box-shadow: 4px 4px 9px black; /**/
 }
 
 #mappingoutput {
@@ -51,13 +55,20 @@ FIELDSET {
 }
 
 .kkpitem {
+    padding:0px 1em 0px 1em;
     border: 1px black solid;
-    width:48%;
+    border-bottom:0px;
+    width:44%;
 }
 .kkpitem:hover {
     background-color: aqua;
 
 }
+
+.kkpitem:first-child {
+    text-align:right;
+}
+
 .br {
     clear: left;
     height:auto;
@@ -65,7 +76,6 @@ FIELDSET {
 
 .div-list {
     width: 48%;
-    word-wrap:normal;
     text-align: left;
 }
 
@@ -73,7 +83,6 @@ FIELDSET {
     float:left;
 }
 .float-container {
-    position:static;
 }
 .tab-container {
     clear:left;
@@ -83,7 +92,6 @@ FIELDSET {
 }
 
 .tabbedcontainer {
-    position: static;
     border-color: red;
     border-width: 1px;
 }
@@ -92,10 +100,12 @@ FIELDSET {
 .tabbutton {
     display:block;
     float:left;
+    height:2em;
     width: 40%;
     border-width:1px 0px 0 1px;
     border-style:solid;
     cursor:pointer;
+    margin-bottom: 0;
 }
 
 .tabbutton:hover {
@@ -108,19 +118,27 @@ FIELDSET {
     height:100%;
 }
 
+.domifiedjson {
+    width:100%;
+    
+}
+
 
 .jkey {
+    display:inline;
     float:left;
     cursor:default;
     width:64%;
     height:1em;
-    overflow:hidden;
 }
 .jval {
-    float:right;
+    display:inline;
+    float:left;
+    cursor:default;
     width:20%;
-    height: 1em;    
-    overflow:hidden;
+    height: 1em;
+    overflow:clip;
+    max-width: 2048px;
     
 }
 .jkvp {
@@ -129,7 +147,8 @@ FIELDSET {
 }
 
 .jkvp:hover {
-
+    white-space:nowrap;
+    height:1em;
     background-color: aquamarine;
 
 }
